--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Pacifico&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="myScript.js"></script>
+    <script src="product.js"></script>
     <title>Document</title>
   </head>
   <body>
