--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script src="product.js"></script>
-    <title>Document</title>
+    <title>Cool Dogs Product Page</title>
   </head>
   <body>
     <!-- header -->
