Changed: header, local links, footer text.

--- a/product.html
+++ b/product.html
@@ -26,20 +26,20 @@
         /></a>
         <p class="logo-text">Cool Dogs</p>
       </div>
-      <nav id="nav-bar">
-        <!-- don't delete! 
-            invisible paragraph for centering navbar links with grid -->
-        <p></p>
-        <div class="nav-bar-links">
-          <p><a href="#highlights-div" class="nav-link">Shop </a></p>
-          <p><a href="#description-div" class="nav-link">Blog </a></p>
-          <p><a href="#about-div" class="nav-link">About </a></p>
-        </div>
-        <div class="cart-div">
-          <img src="./img/cart.png" alt="cart-button" class="cart-button" />
-        </div>
-      </nav>
     </header>
+    <nav id="nav-bar">
+      <!-- don't delete! 
+            invisible paragraph for centering navbar links with grid -->
+      <p></p>
+      <div class="nav-bar-links">
+        <p><a href="#" class="nav-link">Shop </a></p>
+        <p><a href="#" class="nav-link">Blog </a></p>
+        <p><a href="#" class="nav-link">About </a></p>
+      </div>
+      <div class="cart-div">
+        <img src="./img/cart.png" alt="cart-button" class="cart-button" />
+      </div>
+    </nav>
 
     <main id="main">
       <!-- product container (images and information) -->
@@ -189,7 +189,7 @@
         </div>
         <div id="customization-div">
           <h2>Customization</h2>
-          <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <form id="form" action="">
             <p>
               <label for="email"
                 >If you want to add an embroidery with your dog's name, leave us
@@ -249,7 +249,7 @@
       <div class="footer-content">
         <p>
           Disclaimer: Cool Dogs is a made up company and this product is not for
-          sale here. This is a course project from a web development student.
+          sale here. This is a web development course project.
         </p>
         <p>
           Sources: all the product images are from
@@ -267,7 +267,7 @@
             >"Chihuahua Cedric"</a
           >.
         </p>
-        <p>
+        <!-- <p>
           This page was coded fulfilling
           <a
             href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-product-landing-page"
@@ -280,9 +280,8 @@
             target="_blank"
             >Free Code Camp Responsive Web Design course</a
           >.
-        </p>
+        </p> -->
       </div>
     </footer>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
