browser icon added

--- a/product.html
+++ b/product.html
@@ -8,14 +8,20 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- css -->
     <link rel="stylesheet" href="product.css" />
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Pacifico&family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- script -->
     <script src="product.js"></script>
+    <!-- browser icon -->
+    <link rel="icon" href="./img/logo-icon.png" />
+    <!-- page title -->
     <title>Cool Dogs Product Page</title>
   </head>
   <body>
@@ -259,7 +265,10 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
       <!-- About section-->
       <section class="about">
         <div id="about-div">
-          <h2>About Cool Dogs</h2>
+          <div class="about-title-div">
+            <img src="./img/logo-icon.png" alt="Cool Dogs logo" />
+            <h2>About Cool Dogs 🐾</h2>
+          </div>
           <p>
             Cool Dogs is a company founded by two sisters who believe that our
             little canine friends deserve as much love as we can give them.
