quantity form added, customization form deleted

--- a/product.html
+++ b/product.html
@@ -22,7 +22,7 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
     <!-- browser icon -->
     <link rel="icon" href="./img/logo-icon.png" />
     <!-- page title -->
-    <title>Cool Dogs Product Page</title>
+    <title>Cool Dogs</title>
   </head>
   <body>
     <!-- header -->
@@ -197,7 +197,7 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
         <!-- product information (text)-->
         <section class="product-info">
           <div class="product-title-div">
-            <h1>Hand knitted sweater for a small dog (customizable)</h1>
+            <h1>Hand knitted sweater for a small dog</h1>
             <p class="price">€45</p>
           </div>
           <div id="highlights-div">
@@ -207,6 +207,18 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
               <li>Color: yellow.</li>
               <li>Size: S.</li>
             </ul>
+            <div class="add-to-cart-form-div">
+              <form id="add-to-cart-form">
+                <label for="quantity">Quantity:</label>
+                <input
+                  type="number"
+                  id="quantity"
+                  name="quantity"
+                  min="1"
+                  max="10"
+                />
+              </form>
+            </div>
           </div>
           <div class="add-to-cart-btn-div">
             <button class="add-to-cart-button">Add to cart</button>
@@ -224,7 +236,7 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
             your dog warm, stylish and super cute!
           </p>
         </div>
-        <div id="customization-div">
+        <!-- <div id="customization-div">
           <h2>Customization</h2>
           <form id="form" action="">
             <p>
@@ -253,7 +265,7 @@ don't hesitate to contact me at melisandoval@live.com.ar-->
               </p>
             </div>
           </form>
-        </div>
+        </div> -->
         <div id="shipping-div">
           <h2>Shipping and return policies</h2>
           <p>
