--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cool Dogs Website</title>
-    <meta
-      http-equiv="refresh"
-      content="0; url = https://melisandoval.github.io/FCC-Project3-Product-Landing-Page/product.html"
-    />
+    <meta http-equiv="refresh" content="0; url = ./product.html" />
   </head>
   <body></body>
 </html>
